--- a/index.html
+++ b/index.html
@@ -17,84 +17,50 @@
       <header>
         <div class="wrapper">
   <h1>Emily Keshap</h1>
-    <p class="bio"> I am an English major and a member of KKG.
+    <p class="bio"> Welcome to my website! The links below will take you to various projects I have worked on for my Writing and Digital Media class. We used a combination of coding and rhetoric to explore communication and design on the internet. Would you like to see what I've created?
     </p>
   <div class="buttonBox">
-    <a class="myButton" href="#projects">Go</a>
+    <a class="myButton" href="#projects">Show Me!</a>
   </div>
 </div>
       </header>
 
       <main id="projects">
         <div class="recipe a">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-1.png" />
-          <h2>CHOCOLATE MOUSSE</h2>
+          <img src="images/MomOversharing.jpg" alt="Small pins that have various Facebook symbols." />
+          <h2>How to Tell your Mom to Stop Oversharing on Facebook</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">20 mins</p>
+          <p class="mins">5 mins</p>
           <p class="description">
-            This delicious chocolate mousse will delight dinner guests of all ages!</p>
+            Does your mom ever share a little toooooo much on Facebook? <a href="https://medium.com/@ekeshap/how-to-tell-your-mom-to-stop-oversharing-on-facebook-1fe7d73adad3">Read more here</a></p>
         </div>
         <div class="recipe b">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-2.png" />
-          <h2>SMOKED LAMB WITH RICE</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">120 mins</p>
-          <p class="description">
-            Want to feel like your favorite relative came over and made you dinner? This comfort meal of smoked lamb and rice will quickly become a weekend favorite!
-          </p>
-        </div>
+  <img src="images/EvilsofFacebook.jpg" alt="A computer screen with a guy holding binoculars. The Facebook symbol is in the binoculars." />
+  <h2>The Evils of Facebook</h2>
+  <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
+  <p class="mins">9 mins</p>
+  <p class="description">Have you ever been worried about who has your information from your online presence? <a href="https://soundcloud.com/user-348000558/ae4o9uytaeruoyit/s-VeNLyRDvmFU?si=7a1ffa70d2a64802acbbbd31f5d78719">Listen here</a> for a firey discussion on Facebook and the importance of internet safety.</p>
+</div>
         <div class="recipe c">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-5.png" />
-          <h2>GOAT CHEESE SALAD</h2>
+          <h2>The Best Omelette. Ever.</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">25 mins</p>
+          <p class="mins">15 mins</p>
           <p class="description">
-            In addition to the full flavor of goat cheese, this salad includes kale, avocado, and farro to balance it out.</p>
+            Everyone thinks they have the best omelette making method. I am here to show you that my omelette is in fact superior. <a href="youtube.com">Watch here</a></p>
         </div>
         <div class="recipe d">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-4.png" />
-          <h2>CHICKEN SANDWICH</h2>
+          <h2>UNKNOWN LINKED THING</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">45 mins</p>
           <p class="description">
             We've packed a lot into this one - shredded cabbage, carmalized onions, deep-fried chicken, chipotle mayo, half-sour pickles, and a toasted sesame bun will leave you thoroughly satisfied!</p>
         </div>
-        <div class="recipe e">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-3.png" />
-          <h2>SWEET CHURROS</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">90 mins</p>
-          <p class="description">
-            Making this classic summer treat at home will remind you of a childhood spent in the park.</p>
-        </div>
-        <div class="recipe f">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-6.png" />
-          <h2>BERRY PARFAIT</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">10 mins</p>
-          <p class="description">
-            This low-calorie, vitamin-packed parfait is great for breakfast, dessert, or post-workout!</p>
-        </div>
-        <div class="recipe e">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-3.png" />
-          <h2>SWEET CHURROS</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">90 mins</p>
-          <p class="description">
-            Making this classic summer treat at home will remind you of a childhood spent in the park.</p>
-        </div>
-        <div class="recipe f">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-6.png" />
-          <h2>BERRY PARFAIT</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">10 mins</p>
-          <p class="description">
-            This low-calorie, vitamin-packed parfait is great for breakfast, dessert, or post-workout!</p>
-        </div>
       </main>
 
       <footer>
-        <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/savory.svg" class="logo">
+        <img src="image/Footer2.jpg" class="logo">
       </footer>
 
     </div>
