photos added and stuff

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
             Everyone thinks they have the best omelette making method. I am here to show you that my omelette is in fact superior. <a href="youtube.com">Watch here</a></p>
         </div>
         <div class="recipe d">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-4.png" />
-          <h2>UNKNOWN LINKED THING</h2>
+          <img src="image/Volunteer2.jpg"/>
+          <h2>Volunteering in Blacksburg</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">45 mins</p>
           <p class="description">
-            We've packed a lot into this one - shredded cabbage, carmalized onions, deep-fried chicken, chipotle mayo, half-sour pickles, and a toasted sesame bun will leave you thoroughly satisfied!</p>
+            In addition to all of the interesting projects I've had for this class, I have been spending my free time volunteering with the Blacksburg Interfaith Food Pantry as well as the Adam's Marke Tutoring Program. You can find the link to the Food Pantry's website <a href="http://newrivercommunityaction.org/IFP/">here!</a></p>
         </div>
       </main>
 
