--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             Everyone thinks they have the best omelette making method. I am here to show you that my omelette is in fact superior. <a href="youtube.com">Watch here</a></p>
         </div>
         <div class="recipe d">
-          <img src="image/Volunteer2.jpg"/>
+          <img src="images/Volunteer2.jpg"/>
           <h2>Volunteering in Blacksburg</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">45 mins</p>
