--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">5 mins</p>
           <p class="description">
-            Does your mom ever share a little toooooo much on Facebook? <a href="https://medium.com/@ekeshap/how-to-tell-your-mom-to-stop-oversharing-on-facebook-1fe7d73adad3">Read more here</a></p>
+            Remember that one time your mom uploaded a Facebook post detailing that embarrasing thing that happened on vacation that you swore to never ever talk about? Yeah. Ever wondered how to prevent something like that from happening? <a href="https://medium.com/@ekeshap/how-to-tell-your-mom-to-stop-oversharing-on-facebook-1fe7d73adad3">Let me tell you how.</a></p>
         </div>
         <div class="recipe b">
   <img src="images/EvilsofFacebook.jpg" alt="A computer screen with a guy holding binoculars. The Facebook symbol is in the binoculars." />
   <h2>The Evils of Facebook</h2>
   <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
   <p class="mins">9 mins</p>
-  <p class="description">Have you ever been worried about who has your information from your online presence? <a href="https://soundcloud.com/user-348000558/ae4o9uytaeruoyit/s-VeNLyRDvmFU?si=7a1ffa70d2a64802acbbbd31f5d78719">Listen here</a> for a firey discussion on Facebook and the importance of internet safety.</p>
+  <p class="description">Have you ever been worried about who has your information from your online presence? Come<a href="https://soundcloud.com/user-348000558/ae4o9uytaeruoyit/s-VeNLyRDvmFU?si=7a1ffa70d2a64802acbbbd31f5d78719"> learn about safety</a> on the internet, and how Facebook controls your data.</p>
 </div>
         <div class="recipe c">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-5.png" />
@@ -47,7 +47,7 @@
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">15 mins</p>
           <p class="description">
-            Everyone thinks they have the best omelette making method. I am here to show you that my omelette is in fact superior. <a href="youtube.com">Watch here</a></p>
+            Imagine your dream omelette. What does it look like? Well, whatever it looks like, you're about to change that image. This scrumptious <a href="youtube.com">omelette recipe</a> and my personal tips and tricks will have you flipping over your typical omelette into the world of deliciousness.</p>
         </div>
         <div class="recipe d">
           <img src="images/Volunteer2.jpg"/>
@@ -55,12 +55,12 @@
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">45 mins</p>
           <p class="description">
-            In addition to all of the interesting projects I've had for this class, I have been spending my free time volunteering with the Blacksburg Interfaith Food Pantry as well as the Adam's Marke Tutoring Program. You can find the link to the Food Pantry's website <a href="http://newrivercommunityaction.org/IFP/">here!</a></p>
+            In addition to all of the interesting projects I've had for this class, I have been spending my free time volunteering with the Blacksburg Interfaith Food Pantry as well as the Adam's Marke Tutoring Program. You can find the link to the Food Pantry's website. Volunteering has been my favorite way to <a href="http://newrivercommunityaction.org/IFP/">get involved </a>in my new community.</p>
         </div>
       </main>
 
       <footer>
-        <img src="image/Footer2.jpg" class="logo">
+        <img src="images/Footer2.jpg" class="logo">
       </footer>
 
     </div>
