--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <h2>The Evils of Facebook</h2>
   <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
   <p class="mins">9 mins</p>
-  <p class="description">Have you ever been worried about who has your information from your online presence? Come<a href="https://soundcloud.com/user-348000558/ae4o9uytaeruoyit/s-VeNLyRDvmFU?si=7a1ffa70d2a64802acbbbd31f5d78719"> learn about safety</a> on the internet, and how Facebook controls your data.</p>
+  <p class="description">Have you ever been worried about who has your information from your online presence? Come <a href="https://soundcloud.com/user-348000558/ae4o9uytaeruoyit/s-VeNLyRDvmFU?si=7a1ffa70d2a64802acbbbd31f5d78719">learn about safety</a> on the internet, and how Facebook controls your data.</p>
 </div>
         <div class="recipe c">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-5.png" />
@@ -59,12 +59,14 @@
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">45 mins</p>
           <p class="description">
-            In addition to all of the interesting projects I've had for this class, I have been spending my free time volunteering with the Blacksburg Interfaith Food Pantry as well as the Adam's Marke Tutoring Program. You can find the link to the Food Pantry's website. Volunteering has been my favorite way to <a href="http://newrivercommunityaction.org/IFP/">get involved </a>in my new community.</p>
+            In addition to all of the interesting projects I've had for this class, I have been spending my free time volunteering with the Blacksburg Interfaith Food Pantry as well as the Adam's Marke Tutoring Program. You can find the link to the Food Pantry's website. Volunteering has been my favorite way to <a href="http://newrivercommunityaction.org/IFP/">get involved</a> in my new community.</p>
         </div>
       </main>
 
       <footer>
-        <img src="images/Footer2.jpg" class="logo">
+        <div>
+    <p class="copyright">© Emily Keshap 2021</p>
+</div>
       </footer>
 
     </div>
