--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Patua+One&family=Slabo+27px&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
 
   <body>
@@ -66,6 +67,11 @@
       <footer>
         <div>
     <p class="copyright">© Emily Keshap 2021</p>
+    <ul class="icons">
+        <li><a href="https://www.linkedin.com/in/emilykeshap/" target="_blank"><i class="fab fa-linkedin"></a></i></li>
+        <li><a href="https://www.instagram.com/em.kliz/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+        <li><a href="https://www.facebook.com/emily.keshap/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+    </ul>
 </div>
       </footer>
 
