--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
   <p class="description">Have you ever been worried about who has your information from your online presence? Come <a href="https://soundcloud.com/user-348000558/ae4o9uytaeruoyit/s-VeNLyRDvmFU?si=7a1ffa70d2a64802acbbbd31f5d78719">learn about safety</a> on the internet, and how Facebook controls your data.</p>
 </div>
         <div class="recipe c">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-5.png" />
+          <img src="images/omelette.jpg" />
           <h2>The Best Omelette. Ever.</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">15 mins</p>
+          <p class="mins">1.5 mins</p>
           <p class="description">
-            Imagine your dream omelette. What does it look like? Well, whatever it looks like, you're about to change that image. This scrumptious <a href="youtube.com">omelette recipe</a> and my personal tips and tricks will have you flipping over your typical omelette into the world of deliciousness.</p>
+            Imagine your dream omelette. What does it look like? Well, whatever it looks like, you're about to change that image. This scrumptious <a href="https://www.youtube.com/watch?v=OVhutog8V8U">omelette recipe</a> and my personal tips and tricks will have you flipping over your typical omelette into the world of deliciousness.</p>
         </div>
         <div class="recipe d">
           <img src="images/Volunteer2.jpg"/>
